Fix bug where background image was not covering vh on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,6 @@ body {
     background-image: url("../images/background.webp");
     background-size: cover;
     background-position: center center;
-    background-repeat: no-repeat;
     font-family: 'Raleway', sans-serif;
 }
 
